Удалил лишний class у <nav>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<nav id = 'nav' class = 'hamburger'>
+<nav id = 'nav'>
 
   <!-- Mobile navigation menu -->
   <div class = 'hamburger' id = 'hamburger'>
